Deleted corsConfig file that caused redundancy